# dronemap_control

./: CMakeLists.txt  package.xml  setup.py
launch/: control_operator_node.launch  control_server_node.launch  heartbeat_operator_node.launch  simulated_cloud_server_node.launch
msg/: GPS.msg  GPSCoordinate.msg  HeartbeatMessage.msg  MissionRequestMessage.msg  RegistrationRequestMessage.msg  RegistrationResponseMessage.msg
src/dronemap_control/: DronemapControlOperator.py  HeartbeatControlOperator.py  SimulatedCloudServerHandler.py  control_operator_node.py  control_server_node.py  heartbeat_operator_node.py  simulated_cloud_server_node.py
